--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
     <meta property="og:title" content="Juned Raza Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://developerfolio.js.org/" />
-    <meta property="og:image" content="https://developerfolio.js.org/static/media/developerActivity.59389695.svg" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/49837673?s=460&u=367d06d74dfaac2be14becdc37ffa922808c3827&v=4" />
+    <meta property=”og:image:width” content=”180″ />
+    <meta property=”og:image:height” content=”110″ />
     <link rel=preload href="/static/media/Montserrat-Regular.ee653992.ttf" as="font" type="font/woff" crossorigin>
     <link rel=preload href="/static/media/Agustina.21f233e1.woff" as="font" type="font/woff" crossorigin>
 
